* BUG#6996 The effective date of reactivate endorsement is no more set by defaut to the contract end date if the contract is hold
* BUG#6867 Add an error message on endorsement when the contract status is incompatible with endorsements.
* BUG#6837 Add a method that checks the contract status.
* BUG#6822 Change start date translation in change start date endorsement
* BUG#6636 Fix a crash when managing options of a contract with existing void options
* Allow to void an already renewed contract

Version 1.12 - 2017-04-28
* FEA#0000 If the endorsement application on a single contract generates a document it is now stored on the contract no more on the endorsement
* FEA#0000 Manage linked extra_data in option endorsement
* FEA#0000 Manage authorizations per endorsement definition

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Allow to skip irrelevant endorsement parts
* FEA#0000 Add endorsements entry point
* FEA#0000 Add Manage Contacts endorsement
* FEA#0000 Add recalculate contract step
* FEA#0000 Allow to properly chain endorsements

Version 1.6 - 2015-12-23
* FEA#0000 Add Manage options endorsement
* FEA#0000 Add contract subscriber change endorsement
* FEA#0000 The relation field is set to new record on applied endorsements adding a new record, and removed on cancellation
* FEA#0000 Endorsement Step defines if the Endorsement Part can handle several instances.

Version 1.4 - 2015-05-29
* FEA#0000 Use rich text format for endorsement summary
* FEA#0000 Add void endorsement
* FEA#0000 Make endorsement printable
* FEA#0000 Add terminate_contract endorsement
* FEA#0000 Add extra_data endorsement
* FEA#0000 Add endorsement number
* FEA#0000 Allow to trigger calculate after application
* FEA#0000 Allow to specify restoration order

Version 1.3 - 2015-01-22
* FEA#0000 Configure relation_mixin for export import
* FEA#0000 Add sub-state to endorsement
* FEA#0000 Allow to revert back to the version before the endorsement application